HSE_carbon_assisted/HSE_ads/ads_slab/CH3_a/stderr
PSP directory successfully set: /storage/coda1/p-amedford6/0/shared/rich_project_chbe-medford/medford-share/data/pseudos_module/espresso/esp_pseudos_old
bash: ​: command not found
  File "run.py", line 31
    pseudo_dir=getpseudo("espresso_jagriti#psps_mostafa#21#10#06_PSP8"))
    ^
IndentationError: unexpected indent
PSP directory successfully set: /storage/coda1/p-amedford6/0/shared/rich_project_chbe-medford/medford-share/data/pseudos_module/espresso/esp_pseudos_old
bash: ​: command not found
/storage/coda1/p-amedford6/0/shared/rich_project_chbe-medford/medford-share/gits/dev/ase-latest/ase/calculators/calculator.py:509: FutureWarning: The keyword "ignore_bad_restart_file" is deprecated and will be removed in a future version of ASE.  Passing more than one positional argument to Calculator is also deprecated and will stop functioning in the future.  Please pass arguments by keyword (key=value) except optionally the "restart" keyword.
  'The keyword "ignore_bad_restart_file" is deprecated and '
/storage/coda1/p-amedford6/0/shared/rich_project_chbe-medford/medford-share/gits/dev/ase-latest/ase/utils/__init__.py:62: FutureWarning: Please use atoms.cell.cellpar() instead
  warnings.warn(warning)
/storage/coda1/p-amedford6/0/shared/rich_project_chbe-medford/medford-share/builds/sparc/SPARC_latest_2021/sparc-dft-api/sparc/sparc_core.py:379: UserWarning: inital magentic moments were set on the provided atoms, bu the spin polarization flag has not been set. To run spin polarized pass in the flag `SPIN_TYP = 1`
  warnings.warn(spin_warn)
PSP directory successfully set: /storage/coda1/p-amedford6/0/shared/rich_project_chbe-medford/medford-share/data/pseudos_module/espresso/esp_pseudos_old
bash: ​: command not found
/storage/coda1/p-amedford6/0/shared/rich_project_chbe-medford/medford-share/gits/dev/ase-latest/ase/calculators/calculator.py:509: FutureWarning: The keyword "ignore_bad_restart_file" is deprecated and will be removed in a future version of ASE.  Passing more than one positional argument to Calculator is also deprecated and will stop functioning in the future.  Please pass arguments by keyword (key=value) except optionally the "restart" keyword.
  'The keyword "ignore_bad_restart_file" is deprecated and '
/storage/coda1/p-amedford6/0/shared/rich_project_chbe-medford/medford-share/gits/dev/ase-latest/ase/utils/__init__.py:62: FutureWarning: Please use atoms.cell.cellpar() instead
  warnings.warn(warning)
